--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
         "url": "git+https://github.com/arwebSE/jsramverk-api.git"
     },
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
         "express": "^4.17.1",
-        "morgan": "^1.10.0"
+        "jsonwebtoken": "^8.5.1",
+        "morgan": "^1.10.0",
+        "sqlite3": "^5.0.0"
     },
     "jshintConfig": {
         "esversion": 6
