--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "dependencies": {
         "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
+        "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
-        "morgan": "^1.10.0",
-        "sqlite3": "^5.0.0"
+        "mongodb": "^4.1.1",
+        "morgan": "^1.10.0"
     },
-    "jshintConfig": {
-        "esversion": 6
+    "devDependencies": {
+        "nodemon": "^2.0.12"
     }
 }
