--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "description": "API backend section of jsramverk course",
     "main": "index.js",
     "scripts": {
-        "start": "node app.js",
-        "watch": "nodemon app.js",
-        "prod": "set NODE_ENV=production& nodemon app.js"
+        "start": "node src/app.js",
+        "watch": "nodemon src/app.js",
+        "prod": "set NODE_ENV=production& nodemon src/app.js"
     },
     "author": "auro17",
     "license": "ISC",
