--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
         "mongodb": "^4.1.1",
+        "mongoose": "^6.0.12",
         "morgan": "^1.10.0",
         "socket.io": "^4.3.1"
     },
