--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "start": "set NODE_ENV=development& node src/index.js",
-        "watch": "set NODE_ENV=development& nodemon -L --watch src src/index.js",
+        "watch": "set NODE_ENV=development& nodemon -L --delay 3 --watch src src/index.js",
         "prod": "set NODE_ENV=production& node src/index.js",
         "test": "set NODE_ENV=test& nyc --reporter=html --reporter=text mocha 'test/**/*.js'"
     },
