--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "start": "set NODE_ENV=development& node src/index.js",
-        "watch": "set NODE_ENV=development& nodemon -L --delay 2 --watch src src/index.js",
+        "watch": "set NODE_ENV=development& nodemon -L --delay 2 --watch src --exec babel-node src/index.js",
         "prod": "set NODE_ENV=production& node src/index.js",
         "test": "set NODE_ENV=test& nyc --reporter=html --reporter=text mocha 'test/**/*.js'"
     },
@@ -16,11 +16,14 @@
         "url": "git+https://github.com/arwebSE/jsramverk-api.git"
     },
     "dependencies": {
+        "apollo-server-core": "^3.5.0",
+        "apollo-server-express": "^3.5.0",
         "bcrypt": "^5.0.1",
         "chalk": "^4.1.2",
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
+        "graphql": "^16.0.1",
         "jsonwebtoken": "^8.5.1",
         "mongodb": "^4.1.1",
         "mongoose": "^6.0.12",
@@ -28,6 +31,10 @@
         "socket.io": "^4.3.1"
     },
     "devDependencies": {
+        "@babel/cli": "^7.16.0",
+        "@babel/core": "^7.16.0",
+        "@babel/node": "^7.16.0",
+        "@babel/preset-env": "^7.16.4",
         "env-cmd": "^10.1.0",
         "mocha": "^9.1.3",
         "nyc": "^15.1.0"
