--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "start": "set NODE_ENV=development& node src/index.js",
-        "watch": "set NODE_ENV=development& nodemon -L --delay 2 --watch src --exec babel-node src/index.js",
+        "watch": "set NODE_ENV=development& nodemon -L --delay 2 --watch src --exec node src/index.js",
         "prod": "set NODE_ENV=production& node src/index.js",
         "test": "set NODE_ENV=test& nyc --reporter=html --reporter=text mocha 'test/**/*.js'"
     },
@@ -31,10 +31,6 @@
         "socket.io": "^4.3.1"
     },
     "devDependencies": {
-        "@babel/cli": "^7.16.0",
-        "@babel/core": "^7.16.0",
-        "@babel/node": "^7.16.0",
-        "@babel/preset-env": "^7.16.4",
         "env-cmd": "^10.1.0",
         "mocha": "^9.1.3",
         "nyc": "^15.1.0"
