--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,15 @@
 {
     "appService.defaultWebAppToDeploy": "/subscriptions/bbf95d72-3576-417b-bd1c-c1f569f98cec/resourceGroups/DIDA-AURO17-DV1612-H21-LP1/providers/Microsoft.Web/sites/jsramverk-editor-auro17",
-    "appService.deploySubpath": "."
+    "appService.deploySubpath": ".",
+    "restoreTerminals.terminals": [
+        {
+            "splitTerminals": [
+                {
+                    "name": "API Backend",
+                    "commands": ["yarn watch"]
+                }
+            ]
+        }
+    ],
+    "editor.rulers": [120]
 }
