--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
         "socket.io": "^4.3.1"
     },
     "devDependencies": {
+        "chai": "^4.3.4",
+        "chai-http": "^4.3.0",
         "env-cmd": "^10.1.0",
         "mocha": "^9.1.3",
         "nyc": "^15.1.0"
