--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "start": "set NODE_ENV=development& node src/index.js",
         "watch": "set NODE_ENV=development& nodemon -L --delay 2 --watch src --exec node src/index.js",
         "prod": "set NODE_ENV=production& node src/index.js",
-        "test": "set NODE_ENV=test& nyc --reporter=html --reporter=text mocha 'test/**/*.js'"
+        "test": "set NODE_ENV=test& nyc --reporter=html mocha 'test/**/*.js' --exit"
     },
     "author": "auro17",
     "license": "ISC",
